# emtm-service

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
emtm-indexes/mission-index/: .managed.json  meta.json
examples/: README.md  mission_search.sh  user_login.sh  user_logup.sh  user_receive_task.sh  user_release_task.sh
scripts/: all_test.sh  edit_cow_info.sh  edit_student_info.sh  get_cow_info.sh  get_range_task.sh  get_student_info.sh  get_typed_task.sh  mission_search.sh  user_check_credit.sh  user_check_errand.sh  user_check_question.sh  user_check_task.sh  user_check_task_self_receive.sh  user_check_task_self_release.sh  user_check_transaction.sh  user_get_balance.sh  user_get_wechatid.sh  user_login.sh  user_logup.sh  user_receive_task.sh  user_recharge.sh  user_release_task.sh  user_release_task_errand.sh  user_release_task_question.sh  user_release_task_transaction.sh  user_submit.sh  user_submit_student.sh  user_verify.sh  user_withdraw.sh
src/: lib.rs  main.rs
src/control/: controller.rs  group_control.rs  json_objs.rs  log_control.rs  main_control.rs  mod.rs  task_control.rs
src/route/: router.rs
