[package]
name = "emtm"
version = "0.1.0"
authors = ["Miguel Chan <vvchan@outlook.com>"]
edition = "2018"

[dependencies]
futures = "0.1.26"
dotenv = "0.10"
actix-web = "1.0.0-beta.3"
num_cpus = "0.2"
log = "0.4.6"
env_logger = "0.6.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

regex = "*"

emtm_db = { git = "https://github.com/earn-me-some-money/emtm-db.git" }