[package]
name = "emtm-web"
version = "0.1.0"
authors = ["Miguel Chan <vvchan@outlook.com>"]
edition = "2018"

[dependencies]
futures = "0.1.26"
dotenv = "0.10"
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.2"
actix-web = {version = "1.0.0", features = ["ssl", "client"] }
actix-multipart = "0.1.2"
num_cpus = "0.2"
log = "0.4.6"
pretty_env_logger = "0.3.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

regex = "*"

chrono = "0.4.6"

emtm_db = { git = "https://github.com/earn-me-some-money/emtm-db.git" }
emtm-verify = { git = "https://github.com/earn-me-some-money/emtm-verify.git" }
